# social-platform-toolkit

./: .gitignore  CREDENTIALS.md  HISTORY.md  README.md
.github/workflows/: weekly_report.yml
docs/: TIKTOK_THREADS_PROJECT_NOTES.md
tiktok-hot-products-pipeline/: .env.example  .gitignore  README.md  pyproject.toml
tiktok-hot-products-pipeline/.github/workflows/: scheduled.yml
tiktok-hot-products-pipeline/config/: sources.example.yml
tiktok-hot-products-pipeline/scripts/: run_once.sh
tiktok-hot-products-pipeline/src/hot_products/: __init__.py  cli.py  config.py  models.py  pipeline.py  scoring.py  settings.py  sheets.py
tiktok-hot-products-pipeline/src/hot_products/sources/: __init__.py  base.py  custom_json.py  tiktok_profile.py  tiktok_shop.py
tiktok-marketing-api/: .env.example  _token_store.py  account_videos.py  ad_reports.py  analyze_ads.py  auth_account.py  auth_advertiser.py  import_ads_csv.py  main.py  qa_agent.py  requirements.txt
tiktok-oauth-callback/: README.md  index.html  package.json
tiktok-oauth-callback/api/: account-callback.js  advertiser-callback.js
